--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,12 @@ body {
   background-color: #f2f2f2;
 }
 
+.movie-list {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+}
+
 .movie-card {
   background-color: #fff;
   border: 0;
@@ -13,7 +19,13 @@ body {
   padding: 1rem;
   cursor: pointer;
   position: relative;
-  margin: 1rem auto;
+  width: 30%;
+  margin: auto;
+  margin-bottom: 2%;
+}
+
+.movie-title {
+  text-decoration: none;
 }
 
 .movie-director {
@@ -21,7 +33,7 @@ body {
   font-size: 0.8rem;
 }
 
-.saved-list {
+.saved-list-box {
   background-color: #fff;
   border: 0;
   box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12),
@@ -40,8 +52,16 @@ body {
   margin-right: 10px;
 }
 
+.saved-list-titles {
+  display: flex;
+  flex-flow: row nowrap;
+}
+
 .saved-movie {
   margin: 0 10px;
+  box-sizing: border-box;
+  padding: 0.5%;
+  border: 1px solid black;
 }
 .saved-active {
   color: blue;
@@ -64,9 +84,43 @@ body {
 .save-button:hover {
   background-color: green;
   color: white;
+  cursor: pointer;
 }
 
 .home-button {
   padding: 5px 10px;
   background-color: lightskyblue;
+}
+
+/* MOBILE MEDIA QUERY BELOW */
+@media screen and (max-width: 500px) {
+  .movie-card {
+    width: 90%;
+  }
+  .saved-list-titles {
+    display: flex;
+    flex-flow: row nowrap;
+    margin: 0.75%;
+  }
+  .saved-movie {
+    margin: 1.3% 0.4% 1.3% 0.4%;
+    width: 90%;
+  }
+}
+
+/* TABLET AND IPAD MEDIA QUERY BELOW */
+@media screen and (max-width: 768px) {
+  .saved-list-titles {
+    width: 99%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .saved-movie {
+    margin-bottom: 2%;
+    width: 40%;
+    box-sizing: border-box;
+    padding: 1%;
+    margin-left: 30%;
+  }
 }
